[package]
name = "image-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
http-body-util = "0.1.0"
image = "0.24.7"
time = { version = "0.3.30", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
uuid = { version = "1.6.1", features = ["v4"] }
